Fixed z-index issue

--- a/app/view-components/day-view/_day-view.scss
+++ b/app/view-components/day-view/_day-view.scss
@@ -1,4 +1,4 @@
-.ui-view-day {
+.day-view-active .ui-view-day {
   display: block;
   width: 100%;
   height: 100%;
