--- a/app/view-components/month-view/_month-view.scss
+++ b/app/view-components/month-view/_month-view.scss
@@ -10,7 +10,8 @@
     padding: 0 0 20px;
   }
 }
-.ui-view-month {
+
+.month-view-active .ui-view-month {
   display: block;
   width: 100%;
   height: 100%;
